syntax = "proto3";

package users;

option go_package = "github.com/hitesh22rana/chronoverse/proto/users;users";

// RegisterRequest contains the details needed to register a new user.
message RegisterRequest {
    string email    = 1;    // User's email address
    string password = 2;    // User's password}
}

// RegisterResponse contains the result of a registration attempt.
message RegisterResponse {}

// LoginRequest contains the credentials for logging in.
message LoginRequest {
    string email    = 1;    // User's email address
    string password = 2;    // User's password
}

// LoginResponse contains the result of a login attempt.
message LoginResponse {}

// LogoutRequest contains the token to invalidate.
message LogoutRequest {}

// LogoutResponse contains the result of a logout attempt.
message LogoutResponse {}

// ValidateRequest contains the token to validate.
message ValidateRequest {}

// ValidateResponse contains the result of a token validation attempt.
message ValidateResponse {}

// UsersService handles user related operations.
service UsersService {
    // Register a new user.
    rpc Register(RegisterRequest) returns (RegisterResponse) {};

    // Login with email and password.
    rpc Login(LoginRequest) returns (LoginResponse) {};
}
